--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.6.1",
     "node-forge": "^1.3.1",
     "node-rsa": "^1.1.1",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "pg": "^8.11.3"
   }
 }
