--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "bigchaindb-driver": "^4.3.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
