--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "https": "^1.0.0",
     "mssql": "^10.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
